# karuta

./: .gitignore  README.org  dune-project  dune-workspace  flake.nix
.github/: pull_request_template.md
.github/workflows/: build.yml  publish.yml
examples/: conjunction.krt  database.krt  error.krt  factorial.krt  hello.krt  lists.krt  minus.krt  multiply.krt  plus.krt  test.skr  triangular.krt
examples/modules/: external_signature.krt  inline_signature.krt  main.krt  module_with_signature.krt  modules.krt  single_module.krt
examples/sakura/: db.skr  main.krt
lib/: Ast.ml  CodeGenerator.ml  Compile.ml  Compile.mli  Compiler.ml  Crawler.ml  Debugger.ml  EntryPoint.ml  Error.ml  Evaluator.ml  Executable.ml  Executor.ml  FT.ml  Karuta.ml  Location.ml  Logger.ml  Logger.mli  Machine.ml  ModuleName.ml  ModuleName.mli  Parse.ml  Parser.ml  Preprocessor.ml  Print.ml  Query.ml  REPL.ml  RegisterAllocator.ml  Sakura.ml  beam.ml  beam_abstract.ml  cli.ml  dune  lexer.mll  parser.mly  parserMessages.messages
lib/ast/: Karuta.ml  Sakura.ml
lib/beam/: abstract_format.ml  builder.ml  core.ml  erlang_abstract_serializer.ml  serializer.ml  ukanren.ml  ukaren.ml
lib/compiler/: Common.ml  Common.mli  Declaration.ml  Declaration.mli  Directive.ml  Directive.mli  Lookup.ml  Lookup.mli  Signature.ml  Signature.mli  Types.ml
lib/database/: Directive.ml  Lookup.ml  Types.ml
lib/karuta/: Clause.ml  Declaration.ml  Declaration.mli  Directive.ml  Lookup.ml  Module.ml  Preprocessor.ml  Query.ml  Types.ml
lib/sakura/: Clause.ml  Declaration.ml  Directive.ml  Lookup.ml  Module.ml  Preprocessor.ml  Query.ml  Types.ml
lib/shared/: Compiler.ml  DependencyGraph.ml  Directive.ml  Lookup.ml  Preprocessor.ml  Signature.ml
ppx_strip_payload/: dune  ppx_strip_payload.ml
runtime/: karuta.erl  karuta.lfe  sakura.erl  sakura.hrl  sakura.lfe  tmp.erl  tmp.lfe  types.lfe
test/: dune  examples.ml
