; More information on specifying libraries can be found in the Dune documentation:
;
; - https://dune.readthedocs.io/en/stable/concepts.html#libraries
; - https://dune.readthedocs.io/en/stable/dune-files.html#library

(env
 (dev
  (flags
   (:standard -w -8))))

(include_subdirs qualified)

(library
 (name lib)
 (libraries
  menhirLib
  batteries
  sexplib
  lwt
  lwt.unix
  lwt-exit
  lambda-term
  textutils.ascii_table)
 (package karuta)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.std
   ppx_deriving.ord
   ppx_enumerate
   ppx_sexp_conv)))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --table))

(rule
 (deps parserMessages.check)
 (action
  (with-stdout-to
   parserMessages.ml
   (run
    menhir
    %{dep:parser.mly}
    --compile-errors
    %{dep:parserMessages.messages}))))

(rule
 (with-stdout-to
  parserMessages.auto.messages
  (run menhir %{dep:parser.mly} --list-errors)))

(rule
 (with-stdout-to
  parserMessages.check
  (run
   menhir
   %{dep:parser.mly}
   --compare-errors
   %{dep:parserMessages.auto.messages}
   --compare-errors
   %{dep:parserMessages.messages})))

(documentation
 (package karuta))
