; More information on specifying libraries can be found in the Dune documentation:
;
; - https://dune.readthedocs.io/en/stable/concepts.html#libraries
; - https://dune.readthedocs.io/en/stable/dune-files.html#library

(env
 (dev
  (flags (:standard))))

(include_subdirs qualified)

(library
 (name lib)
 (libraries
  batteries
  sexplib
  lwt
  lwt.unix
  lwt-exit
  lambda-term
  textutils.ascii_table)
 (package karuta)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.std
   ppx_deriving.ord
   ppx_enumerate
   ppx_sexp_conv)))

(documentation
 (package karuta))
